Fix mobile link z-index issue

--- a/public/css/smooth-calendar-public.css
+++ b/public/css/smooth-calendar-public.css
@@ -245,7 +245,7 @@
 	display: block;
 	position: absolute;
 	top: 2.8em;
-	z-index: 2;
+	z-index: 3;
 	width: 15em;
 	background: #fff;
 	border: 1px solid #000;
